changes to travis again

--- a/.travis.yml
+++ b/.travis.yml
@@ -65,8 +65,7 @@ install:
 
 # Linting
 script:
-  - $PYTHON -m flake8 --show-source --ignore=F811,W293,W391,W292,W291,W504,W503 \
-  --max-line-length=88 --exclude="*examples.py,testing.py,*kde.py" KDEpy
+  - $PYTHON -m flake8 --show-source --ignore=F811,W293,W391,W292,W291,W504,W503 --max-line-length=88 --exclude="*examples.py,testing.py,*kde.py" KDEpy
   
 # -------------------- deploy: deploy to PyPI --------- 
 deploy:
