--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,7 @@ before_install:
   - $PIP install -r requirements.txt
   - $PIP install pep8>=1.7.1
   - $PIP install flake8>=3.5.0
+  - $PIP install black
 
 # Install the package, create source distribution (worse alternative to wheels)
 # Run the tests.
@@ -65,6 +66,7 @@ install:
 
 # Linting
 script:
+  - black KDEpy -l 120 --check
   - $PYTHON -m flake8 --show-source --ignore=F811,W293,W391,W292,W291,W504,W503 --max-line-length=88 --exclude="*examples.py,testing.py,*kde.py" KDEpy
   
 # -------------------- deploy: deploy to PyPI --------- 
