--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ matrix:
 # The remaining 2 are set to assure Python 3 is used on OS X (mac)
 env:
   global:
-    - CIBW_SKIP="cp27-* cp33-* cp34-* cp38-*"
+    - CIBW_SKIP="cp27-* cp33-* cp34-* cp35-*"
     - CIBW_TEST_REQUIRES=pytest
     - CIBW_TEST_COMMAND="python3 -m pytest {project}/KDEpy --doctest-modules"
     - PIP=pip3
@@ -56,6 +56,7 @@ before_install:
   - $PIP install -r requirements.txt
   - $PIP install pep8>=1.7.1
   - $PIP install flake8>=3.5.0
+  - $PIP install black
 
 # Install the package, create source distribution (worse alternative to wheels)
 # Run the tests.
@@ -65,7 +66,8 @@ install:
 
 # Linting
 script:
-  - $PYTHON -m flake8 --show-source --ignore=F811,W293,W391,W292,W291,W504,W503 --max-line-length=88 --exclude="*examples.py,testing.py,*kde.py" KDEpy
+  - black KDEpy -l 120 --check
+  - $PYTHON -m flake8 --show-source --ignore=F811,W293,W391,W292,W291,W504,W503,E231 --max-line-length=120 --exclude="*examples.py,testing.py,*kde.py" KDEpy
   
 # -------------------- deploy: deploy to PyPI --------- 
 deploy:
