--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -33,6 +33,8 @@ build_script:
   - pip install --upgrade cibuildwheel wheel
   - echo $env:APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH
   - echo $env:APPVEYOR_REPO_BRANCH
+  - echo "APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH = $env:APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH"
+  - echo "APPVEYOR_REPO_BRANCH = $env:APPVEYOR_REPO_BRANCH"
 
 
 # Run the tests (but linting is done on Travis)
