--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -35,6 +35,8 @@ build_script:
   - echo $env:APPVEYOR_REPO_BRANCH
   - echo "APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH = $env:APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH"
   - echo "APPVEYOR_REPO_BRANCH = $env:APPVEYOR_REPO_BRANCH"
+  - echo APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH=%APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH%
+  - echo APPVEYOR_REPO_BRANCH=%APPVEYOR_REPO_BRANCH%
 
 
 # Run the tests (but linting is done on Travis)
