--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -31,25 +31,10 @@ build_script:
   - pip install -r requirements.txt
   - python setup.py develop
   - pip install --upgrade cibuildwheel wheel twine
-  - echo $env:APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH
-  - echo $env:APPVEYOR_REPO_BRANCH
-  - echo "APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH = $env:APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH"
-  - echo "APPVEYOR_REPO_BRANCH = $env:APPVEYOR_REPO_BRANCH"
-  - echo APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH=%APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH%
-  - echo APPVEYOR_REPO_BRANCH=%APPVEYOR_REPO_BRANCH%
 
 
 # Run the tests (but linting is done on Travis)
 test_script:
-  - pip install --upgrade cibuildwheel wheel twine certifi
-  - set SSL_CERT_FILE=(python -c "import certifi;print(certifi.where())")
-  - echo %SSL_CERT_FILE%
-  - set SSL_CERT_FILE=`python -c "import certifi;print(certifi.where())"`
-  - echo %SSL_CERT_FILE%
-    # Fix git SSL errors.
-  - python -c "import certifi;print(certifi.where())">cacert.txt
-  - "set /p SSL_CERT_FILE=<cacert.txt"
-  - python -m cibuildwheel --output-dir wheelhouse
   - pytest KDEpy --doctest-modules --doctest-glob="*.rst" --capture=sys
 
 
@@ -66,8 +51,8 @@ on_success:
   - ps: |
        if ($env:APPVEYOR_REPO_TAG -eq 'true' -or $env:APPVEYOR_REPO_TAG -eq 'True') {
          pip install --upgrade cibuildwheel wheel twine certifi
-         set SSL_CERT_FILE=(python -c "import certifi;print(certifi.where())")
-         export SSL_CERT_FILE=`python3 -c "import certifi;print(certifi.where())"`
+         python -c "import certifi;print(certifi.where())">cacert.txt
+         "set /p SSL_CERT_FILE=<cacert.txt"
          python -m cibuildwheel --output-dir wheelhouse
          twine upload "wheelhouse/*.whl" --skip-existing
           }
