--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -30,7 +30,7 @@ build_script:
   - conda update conda --quiet
   - pip install -r requirements.txt
   - python setup.py develop
-  - pip install --upgrade cibuildwheel wheel twine
+  - pip install --upgrade cibuildwheel wheel twine certifi
 
 
 # Run the tests (but linting is done on Travis)
@@ -43,6 +43,9 @@ after_test:
   - cmd: "echo [pypi] > %USERPROFILE%\\.pypirc"
   - "echo username: tommyod >> %USERPROFILE%\\.pypirc"
   - "echo password: %TWINE_PASSWORD% >> %USERPROFILE%\\.pypirc"
+  - python -c "import certifi;print(certifi.where())">cacert.txt
+  - set /p SSL_CERT_FILE=<cacert.txt
+  - python -m cibuildwheel --output-dir wheelhouse
 
 
 # If a tag was associated with the commit, push to pypi
@@ -50,10 +53,6 @@ on_success:
   - cmd: "echo $env:APPVEYOR_REPO_TAG"
   - ps: |
        if ($env:APPVEYOR_REPO_TAG -eq 'true' -or $env:APPVEYOR_REPO_TAG -eq 'True') {
-         pip install --upgrade cibuildwheel wheel twine certifi
-         python -c "import certifi;print(certifi.where())">cacert.txt
-         set /p SSL_CERT_FILE=<cacert.txt
-         python -m cibuildwheel --output-dir wheelhouse
          twine upload "wheelhouse/*.whl" --skip-existing
           }
 
