--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.6, 3.7, 3.8, 3.9]
-    name: Python ${{ matrix.python-version }} sample
+    name: Python ${{ matrix.python-version }} on ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
       - name: Setup python
@@ -21,4 +21,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-      - run: pip install -r requirements.txt
+      - run: |
+          pip install -r requirements.txt
+          pip install pep8>=1.7.1 flake8>=3.5.0 black
+          pip install -e .
+          pytest KDEpy --doctest-modules --capture=sys
