--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,12 @@ jobs:
           
       - name: Build package ${{ matrix.python-version }} on ${{ matrix.os }}
         # if: github.event_name == 'push'
-        if: runner.os != 'Windows'
+        if: runner.os != 'Windows' && matrix.python-version == '3.8'
+        env:
+          CIBW_BUILD: 'cp36-* cp37-* cp38-*'
+          CIBW_TEST_REQUIRES: pytest
+          CIBW_TEST_COMMAND: "python3 -m pytest {project}/KDEpy --doctest-modules"
+
         run: |
           pip install cibuildwheel twine;
           python -m cibuildwheel --output-dir dist;
