--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,11 +40,22 @@ jobs:
           
       - name: Build package ${{ matrix.python-version }} on ${{ matrix.os }}
         # if: github.event_name == 'push'
-        if: matrix.python-version == '3.8' && matrix.os != 'Windows'
+        if: matrix.python-version == '3.8' && matrix.os != 'windows-latest'
         env:
           CIBW_BUILD: 'cp36-* cp37-* cp38-*'
           CIBW_TEST_REQUIRES: pytest
           CIBW_TEST_COMMAND: "python3 -m pytest {project}/KDEpy --doctest-modules"
+        run: |
+          pip install cibuildwheel twine;
+          python -m cibuildwheel --output-dir dist;
+          
+      - name: Build package ${{ matrix.python-version }} on ${{ matrix.os }}
+        # if: github.event_name == 'push'
+        if: matrix.python-version == '3.8' && matrix.os == 'windows-latest'
+        env:
+          CIBW_BUILD: 'cp36-* cp37-* cp38-*'
+          CIBW_TEST_REQUIRES: pytest
+          CIBW_TEST_COMMAND: "python3 -m pytest {project}\KDEpy --doctest-modules"
         run: |
           pip install cibuildwheel twine;
           python -m cibuildwheel --output-dir dist;
