--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,13 +49,13 @@ jobs:
           pip install cibuildwheel twine;
           python -m cibuildwheel --output-dir dist;
           
-      - name: Build package ${{ matrix.python-version }} on ${{ matrix.os }}
+      - name: Build win package ${{ matrix.python-version }} on ${{ matrix.os }}
         # if: github.event_name == 'push'
         if: matrix.python-version == '3.8' && matrix.os == 'windows-latest'
         env:
           CIBW_BUILD: 'cp36-* cp37-* cp38-*'
           CIBW_TEST_REQUIRES: pytest
-          CIBW_TEST_COMMAND: "python3 -m pytest {project}\KDEpy --doctest-modules"
+          CIBW_TEST_COMMAND: "python3 -m pytest {project}\\KDEpy --doctest-modules"
         run: |
           pip install cibuildwheel twine;
           python -m cibuildwheel --output-dir dist;
