--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,12 @@ jobs:
           pip install cibuildwheel twine;
           python -m cibuildwheel --output-dir dist;
           
+      - name: Install libpython
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt install libpython3.6-dev;
+      
+          
       - name: Build win package ${{ matrix.python-version }} on ${{ matrix.os }}
         # if: github.event_name == 'push'
         if: matrix.python-version == '3.8' && matrix.os == 'windows-latest'
