--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.6, 3.7, 3.8]
+        fail-fast: false
         
     # The job
     name: Python ${{ matrix.python-version }} on ${{ matrix.os }}
@@ -37,6 +38,12 @@ jobs:
           black KDEpy -l 120 --check
           flake8 --show-source --ignore=F811,W293,W391,W292,W291,W504,W503,E231 --max-line-length=120 --exclude="*examples.py,testing.py,*kde.py" KDEpy
 # pytest KDEpy --doctest-modules --capture=sys
+
+
+      - name: Install libpython
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt install libpython3.6-dev;
           
       - name: Build package ${{ matrix.python-version }} on ${{ matrix.os }}
         # if: github.event_name == 'push'
@@ -49,10 +56,6 @@ jobs:
           pip install cibuildwheel twine;
           python -m cibuildwheel --output-dir dist;
           
-      - name: Install libpython
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          sudo apt install libpython3.6-dev;
       
           
       - name: Build win package ${{ matrix.python-version }} on ${{ matrix.os }}
