--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,43 +44,27 @@ jobs:
       - name: Install libpython
         if: matrix.os == 'ubuntu-latest'
         run: |
-          sudo apt-get upgrade;
-          sudo apt-get install libc6;
-          sudo apt install libpython3.6-dev;
-          pip install tensorflow;
+          sudo apt update;
+          sudo apt install glibc-source;
           
       - name: Build package ${{ matrix.python-version }} on ${{ matrix.os }}
-        # if: github.event_name == 'push'
         if: matrix.python-version == '3.8' && matrix.os != 'windows-latest'
         env:
           CIBW_BUILD: 'cp36-* cp37-* cp38-*'
           CIBW_TEST_REQUIRES: pytest
           CIBW_TEST_COMMAND: "python3 -m pytest {project}/KDEpy --doctest-modules"
         run: |
-          wget http://ftp.gnu.org/gnu/glibc/glibc-2.14.tar.gz
-          tar zxvf glibc-2.14.tar.gz
-          cd glibc-2.14
-          mkdir build
-          cd build
-          ../configure --prefix=/opt/glibc-2.14
-          make -j4
-          sudo make install
-          export LD_LIBRARY_PATH=/opt/glibc-2.14/lib
-          cd ../..
-          pip install cibuildwheel==1.6.3 twine;
+          pip install cibuildwheel twine --upgrade;
           python -m cibuildwheel --output-dir dist;
           
-      
-          
       - name: Build win package ${{ matrix.python-version }} on ${{ matrix.os }}
-        # if: github.event_name == 'push'
         if: matrix.python-version == '3.8' && matrix.os == 'windows-latest'
         env:
           CIBW_BUILD: 'cp36-* cp37-* cp38-*'
           CIBW_TEST_REQUIRES: pytest
           CIBW_TEST_COMMAND: "pytest {project}\\KDEpy --doctest-modules"
         run: |
-          pip install cibuildwheel==1.6.3 twine;
+          pip install cibuildwheel twine --upgrade;
           python -m cibuildwheel --output-dir dist;
    
       - name: Publish Python distribution to PyPI
