--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,14 +10,14 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: false # Allow one of the matrix builds to fail without failing others
       matrix:
-        os: [ubuntu-18.04, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.6, 3.7, 3.8]
         
         
     # The job
-    name: Python ${{ matrix.python-version }} on ${{ matrix.os }}
+    name: Python ${{ matrix.python-version }} / ${{ matrix.os }}
     
     # The steps in the job. Each step either RUNS code, or USES an action
     steps:
@@ -38,7 +38,9 @@ jobs:
           pip install -e .
           black KDEpy -l 120 --check
           flake8 --show-source --ignore=F811,W293,W391,W292,W291,W504,W503,E231 --max-line-length=120 --exclude="*examples.py,testing.py,*kde.py" KDEpy
-# pytest KDEpy --doctest-modules --capture=sys
+          pytest KDEpy --doctest-modules --capture=sys
+
+# ======================= BUILD WHEELS AND UPLOAD TO PYPI ==================================
 
       - name: Build wheels ${{ matrix.python-version }} on ${{ matrix.os }}
         if: matrix.python-version == '3.8'
@@ -48,6 +50,7 @@ jobs:
           pip install cibuildwheel twine --upgrade;
           python -m cibuildwheel --output-dir dist;
    
+   	# 'dist' is the default folder, so use it above when running cibuildwheel
       - name: Publish Python distribution to PyPI
         if: github.ref == 'refs/heads/master' && matrix.python-version == '3.8'
         uses: pypa/gh-action-pypi-publish@master
