--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,12 @@ jobs:
           black KDEpy -l 120 --check
           flake8 --show-source --ignore=F811,W293,W391,W292,W291,W504,W503,E231 --max-line-length=120 --exclude="*examples.py,testing.py,*kde.py" KDEpy
           pytest KDEpy --doctest-modules --capture=sys
+          
+      - name: Testing
+        env: MYVAR: 'hello-world'
+        run: |
+          echo %MYVAR%
+          echo "%MYVAR%"
 
 # ======================= BUILD WHEELS AND UPLOAD TO PYPI ==================================
 
