--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,9 @@ jobs:
           architecture: x64
           
       - name: Run tests and linting
+        env:
+          CIBW_BUILD: 'cp36-* cp37-* cp38-*'
+          PYPI_PASSWORD: ${{ secrets.pypi_password }}
         run: |
           pip install -r requirements.txt --quiet
           pip install pep8>=1.7.1 flake8>=3.5.0 black pip --upgrade --quiet
@@ -39,25 +42,5 @@ jobs:
           black KDEpy -l 120 --check
           flake8 --show-source --ignore=F811,W293,W391,W292,W291,W504,W503,E231 --max-line-length=120 --exclude="*examples.py,testing.py,*kde.py" KDEpy
           pytest KDEpy --doctest-modules --capture=sys
-
-# ======================= BUILD WHEELS AND UPLOAD TO PYPI ==================================
-
-      - name: Build wheels (non-windows) ${{ matrix.python-version }} on ${{ matrix.os }}
-        if: github.ref == 'refs/heads/master' && matrix.python-version == '3.8' && matrix.os != 'windows-latest'
-        env:
-          CIBW_BUILD: 'cp36-* cp37-* cp38-*'
-          PYPI_PASSWORD: ${{ secrets.pypi_password }}
-        run: |
-          pip install cibuildwheel twine --upgrade;
-          python -m cibuildwheel --output-dir dist;
-          python -m twine upload dist/* -u tommyod -p "$PYPI_PASSWORD" --skip-existing;
-          
-      - name: Build wheels (windows) ${{ matrix.python-version }} on ${{ matrix.os }}
-        if: github.ref == 'refs/heads/master' && matrix.python-version == '3.8' && matrix.os == 'windows-latest'
-        env:
-          CIBW_BUILD: 'cp36-* cp37-* cp38-*'
-          PYPI_PASSWORD: ${{ secrets.pypi_password }}
-        run: |
-          pip install cibuildwheel twine --upgrade;
-          python -m cibuildwheel --output-dir dist;
-          python -m twine upload dist/* -u tommyod -p "${env:PYPI_PASSWORD}" --skip-existing;
+          echo "$PYPI_PASSWORD"
+          echo "$CIBW_BUILD"
