--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,9 +36,9 @@ jobs:
           pip install -r requirements.txt --quiet
           pip install pep8>=1.7.1 flake8>=3.5.0 black pip --upgrade --quiet
           pip install -e .
-          black KDEpy -l 120 --check
-          flake8 --show-source --ignore=F811,W293,W391,W292,W291,W504,W503,E231 --max-line-length=120 --exclude="*examples.py,testing.py,*kde.py" KDEpy
-          pytest KDEpy --doctest-modules --capture=sys
+          python -m black KDEpy -l 120 --check
+          python -m flake8 --show-source --ignore=F811,W293,W391,W292,W291,W504,W503,E231 --max-line-length=120 --exclude="*examples.py,testing.py,*kde.py" KDEpy
+          python -m pytest KDEpy --doctest-modules --capture=sys
 
 # ======================= BUILD WHEELS AND UPLOAD TO PYPI ==================================
 
