--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false # Allow one of the matrix builds to fail without failing others
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.6, 3.7, 3.8, 3.9]
         
         
     # The job
@@ -33,8 +33,9 @@ jobs:
           
       - name: Run tests and linting
         run: |
-          pip install -r requirements.txt --quiet
-          pip install pep8>=1.7.1 flake8>=3.5.0 black pip --upgrade --quiet
+          pip install pip --upgrade
+          pip install -r requirements.txt --quiet --upgrade --no-cache-dir
+          pip install pep8>=1.7.1 flake8>=3.5.0 black --upgrade --quiet
           pip install -e .
           python -m black KDEpy -l 120 --check
           python -m flake8 --show-source --ignore=F811,W293,W391,W292,W291,W504,W503,E231 --max-line-length=120 --exclude="*examples.py,testing.py,*kde.py" KDEpy
