--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false # Allow one of the matrix builds to fail without failing others
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.6, 3.7, 3.8, 3.9, '3.10']
         
         
     # The job
@@ -46,7 +46,7 @@ jobs:
       - name: Build wheels (non-windows) ${{ matrix.python-version }} on ${{ matrix.os }}
         if: github.ref == 'refs/heads/master' && matrix.python-version == '3.9' && matrix.os != 'windows-latest'
         env:
-          CIBW_BUILD: 'cp36-* cp37-* cp38-* cp39-*'
+          CIBW_BUILD: 'cp36-* cp37-* cp38-* cp39-* cp310-*'
           PYPI_PASSWORD: ${{ secrets.pypi_password }}
         run: |
           pip install cibuildwheel twine --upgrade;
@@ -56,7 +56,7 @@ jobs:
       - name: Build wheels (windows) ${{ matrix.python-version }} on ${{ matrix.os }}
         if: github.ref == 'refs/heads/master' && matrix.python-version == '3.9' && matrix.os == 'windows-latest'
         env:
-          CIBW_BUILD: 'cp36-* cp37-* cp38-* cp39-*'
+          CIBW_BUILD: 'cp36-* cp37-* cp38-* cp39-* cp310-*'
           PYPI_PASSWORD: ${{ secrets.pypi_password }}
         run: |
           pip install cibuildwheel twine --upgrade;
